--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,10 @@ before_install: |
   test "$TRAVIS_BRANCH" = master && TAGS="$TAGS latest" || true
   test -n "$TRAVIS_TAG"          && TAGS="$TAGS stable $TRAVIS_TAG" || true
   echo "Tags are $TAGS"
+  if [ -n "$TRAVIS_TAG" ]; then
+    precommit_tag="$(awk -F: '/^ *entry:/ {print $NF}' .pre-commit-hooks.yaml)"
+    test "$TRAVIS_TAG" = "$precommit_tag"
+  fi
 
 script:
   - mkdir -p deploy
