--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,33 @@ jobs:
       os: osx
 
     - stage: Deploy docker image
-      if: branch = master
+      # Don't try to run this on pull_request which hides secret env vars.
+      if: branch = master AND type = push
       script:
         - source ./.multi_arch_docker
         - set -ex; multi_arch_docker::main; set +x
+
+    # Run pre-commit checks with the shellcheck docker package that was just
+    # deployed.
+    - stage: Pre-commit checks
+      language: python
+      python: 3.7
+      cache:
+        - pip
+        - directories: $HOME/.cache/pre-commit
+      install: pip install pre-commit
+      script: |
+        # Run pre-commit. It also uses shellcheck on itself from the just built
+        # and deployed docker image.
+        # Use the first build tag, or if there isn't any use 'latest'.
+        set -e
+        tag="$(echo "${TAGS/ */}")"
+        tag="${tag:-latest}"
+        echo "tag: $tag"
+        sed -i.bak -e "s/\(shellcheck\):.*/\1:$tag/" .pre-commit-config.yaml
+        pre-commit run --all-files --show-diff-on-failure --color=always
+        mv .pre-commit-config.yaml.bak .pre-commit-config.yaml
+      after_success:  # do nothing
 
 before_install: |
   DOCKER_BASE="$DOCKER_USERNAME/shellcheck"
@@ -29,6 +52,9 @@ before_install: |
   test "$TRAVIS_BRANCH" = master && TAGS="$TAGS latest" || true
   test -n "$TRAVIS_TAG"          && TAGS="$TAGS stable $TRAVIS_TAG" || true
   echo "Tags are $TAGS"
+  set -e
+  # The version encoded in pre-commit and built version must be in sync. If not,
+  # the pre-commit version was forgotten to be updated.
   if [ -n "$TRAVIS_TAG" ]; then
     precommit_tag="$(awk -F: '/^ *entry:/ {print $NF}' .pre-commit-hooks.yaml)"
     test "$TRAVIS_TAG" = "$precommit_tag"
@@ -59,4 +85,5 @@ deploy:
   local_dir: deploy
   on:
     repo: koalaman/shellcheck
+    condition: $TRAVIS_BUILD_STAGE_NAME = Build
     all_branches: true
